front_short_link_api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-link-deploy
  namespace: short-link
spec:
  replicas: 1
  selector:
    matchLabels:
      components: front
  template:
    metadata:
      labels:
        components: front
    spec:
      containers:
      - name: short-link
        image: bazdoc/short-link:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          exec:
            command:
              - curl
              - --fail
              - http://localhost:3000/api
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 1
