front_short_link_api/cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: short-link-cluster-ip
  namespace: short-link
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: front
