front_short_link_api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress01-short-link
  namespace: short-link
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: short-link.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-link-cluster-ip
            port:
              number: 80
